# reklama

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  dialogs.py  docker-compose.yml  found_links.txt  import_message.py  message.txt  progress.py  progress_reklama.json  progress_reklama2.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_loop.ps1  search.py  sender.py  utils.py  web.py
.kilo/plans/: 1782714289741-telegram-ad-broadcast-bot.md  1782733406601-continuous-improvement-roadmap.md
reklama/: auth.py  config.py  dialogs.py  emoji.py  engine.py  progress.py  rotator.py  sender.py  spintax.py  tui.py  utils.py
reklama/web/static/: app.js  styles.css
reklama/web/templates/: index.html
scripts/: README.md  forward_from_saved.py
tests/: test_config.py  test_dialogs.py  test_emoji.py  test_engine.py  test_import.py  test_import_smoke.py  test_progress.py  test_run.py  test_search.py  test_sender.py  test_spintax.py  test_tui.py  test_utils.py  test_web.py
